--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-adminlte2==0.4.3
 django-ckeditor==6.5.1
 django-jet-reboot==1.3.3
 django-js-asset==2.0.0
+et-xmlfile==1.1.0
 graphene==2.1.9
 graphql-core==2.3.2
 graphql-relay==2.0.1
@@ -20,7 +21,10 @@ gunicorn==20.1.0
 idna==3.4
 jet-bridge-base==1.7.15
 jet-django==1.7.15
+numpy==1.24.3
 oauthlib==3.2.2
+openpyxl==3.1.2
+pandas==2.0.1
 Pillow==9.5.0
 promise==2.3
 prompt-toolkit==2.0.9
